@@ -18,7 +18,7 @@ rm-elf:
 
 $(TARGET): $(OBJS) romdisk.o
 	$(KOS_CC) $(KOS_CFLAGS) $(KOS_LDFLAGS) -o $(TARGET) $(KOS_START) \
-		$(OBJS) romdisk.o $(OBJEXTRA) -L$(KOS_BASE)/lib -lgl -lpcx -ltga $(KOS_LIBS)
+		$(OBJS) romdisk.o $(OBJEXTRA) -L$(KOS_BASE)/lib -lgl -lpcx -ltga -lkosutils $(KOS_LIBS)
 
 romdisk.img:
 	$(KOS_GENROMFS) -f romdisk.img -d romdisk -v
